--- a/ahmad10001.html
+++ b/ahmad10001.html
@@ -191,9 +191,6 @@ display: none;
 	<div>
  إسناده صحيح على شرط مسلم.	
 	</div>
-<hr>
-<a href="https://archive.org/details/FP34714">لتحميل صحيح البخاري نسخة الأوقاف السعودية بصيغة PDF اضغط هنا <i class="fa fa-external-link sharh"></i></a><br><a href="https://archive.org/details/FP121852">تحميل صحيح مسلم نسخة الأوقاف السعودية بصيغة PDF اضغط هنا <i class="fa fa-external-link sharh"></i></a><br><a href="https://archive.org/details/sonan.al.nsaei.t.twiq/">تحميل سنن النسائي بصيغة PDF اضغط هنا <i class="fa fa-external-link sharh"></i></a><br><a href="https://archive.org/details/FP144444">تحميل سنن أبي داود نسخة الأوقاف السعودية بصيغة PDF اضغط هنا <i class="fa fa-external-link sharh"></i></a><br><a href="https://archive.org/details/FP144449">تحميل سنن الترمذي نسخة الأوقاف السعودية بصيغة PDF اضغط هنا <i class="fa fa-external-link sharh"></i></a><br><a href="https://archive.org/details/FP144429">تحميل سنن ابن ماجه نسخة الأوقاف السعودية بصيغة PDF اضغط هنا <i class="fa fa-external-link sharh"></i></a><br><a href="https://archive.org/details/ozkorallh_20181027">تحميل مسند أحمد بصيغة PDF اضغط هنا <i class="fa fa-external-link sharh"></i></a>
-</div>
 </div>
 </div>
 <!-- Grid column -->
@@ -203,4 +200,4 @@ display: none;
 </div>
 </div>
 </section>
-<div style="font-size: xx-large;text-align: center;"><a href="https://github.com/QuranIslam/"><i class="fa fa-github"></i> </a><a href="https://www.youtube.com/channel/UC1-K01zlc6eLiR0xcc5FVmg"><i class="fa fa-youtube"></i> </a><a href="https://www.instagram.com/muslimquranislam/"><i class="fa fa-instagram"></i> </a><a href="https://www.pinterest.com/MuslimQuranIslam/"><i class="fa fa-pinterest"></i> </a></div></body></html>
+<div style="font-size: xx-large;text-align: center;"><a href="https://github.com/9v3/"><i class="fa fa-github"></i> </a><a href="https://www.instagram.com/w_.dg/"><i class="fa fa-instagram"></i> </a></div></body></html>
