--- a/ahmad10.html
+++ b/ahmad10.html
@@ -61,7 +61,7 @@ padding-bottom: 1px;
 <div class="z-depth-0 default-gradient pt-1 pt-md-1 pt-sm-1 pt-xl-0 pt-lg-0">
  
 </div> </header><br><div style="text-align:center;">
-<a href="https://quranislam.github.io" style="text-align:center;"><img width="250px" src="images/tawhid.png" alt="أشهد أن لا إله إلا الله وحده لا شريك له، وأن محمدا عبده ورسوله" style="text-align:center;"><div style="font-size:small!important;">(للإنتقال إلى الصفحة الرئيسية للموسوعة الإسلامية اضغط هنا)</div></a>
+<a href="https://hadiths-sage.vercel.app" style="text-align:center;"><img width="250px" src="images/tawhid.png" alt="أشهد أن لا إله إلا الله وحده لا شريك له، وأن محمدا عبده ورسوله" style="text-align:center;"><div style="font-size:small!important;">(للإنتقال إلى الصفحة الرئيسية للموسوعة الإسلامية اضغط هنا)</div></a>
 </div><br>
 <section>
 <div class="container-fluid">
@@ -192,8 +192,6 @@ display: none;
 حديث صحيح لغيره، عبد الملك بن الحارث مترجم في " التاريخ الكبير " للبخاري ٥ / ٤٠٩، و" الجرح والتعديل " ٥ / ٣٤٦، وذكره ابن حبان في " الثقات " ٥ / ١١٧، وقد توبع، ولم يترجم له الحافظ في " تعجيل المنفعة " مع أنه على شرطه، وأخطأ الشيخ أحمد شاكر رحمه الله فظنه عبد الملك بن أبي بكر بن عبد الرحمن بن الحارث بن هشام الثقة الذي روى له الجماعة.	
 	</div>
 <hr>
-<a href="https://archive.org/details/FP34714">لتحميل صحيح البخاري نسخة الأوقاف السعودية بصيغة PDF اضغط هنا <i class="fa fa-external-link sharh"></i></a><br><a href="https://archive.org/details/FP121852">تحميل صحيح مسلم نسخة الأوقاف السعودية بصيغة PDF اضغط هنا <i class="fa fa-external-link sharh"></i></a><br><a href="https://archive.org/details/sonan.al.nsaei.t.twiq/">تحميل سنن النسائي بصيغة PDF اضغط هنا <i class="fa fa-external-link sharh"></i></a><br><a href="https://archive.org/details/FP144444">تحميل سنن أبي داود نسخة الأوقاف السعودية بصيغة PDF اضغط هنا <i class="fa fa-external-link sharh"></i></a><br><a href="https://archive.org/details/FP144449">تحميل سنن الترمذي نسخة الأوقاف السعودية بصيغة PDF اضغط هنا <i class="fa fa-external-link sharh"></i></a><br><a href="https://archive.org/details/FP144429">تحميل سنن ابن ماجه نسخة الأوقاف السعودية بصيغة PDF اضغط هنا <i class="fa fa-external-link sharh"></i></a><br><a href="https://archive.org/details/ozkorallh_20181027">تحميل مسند أحمد بصيغة PDF اضغط هنا <i class="fa fa-external-link sharh"></i></a>
-</div>
 </div>
 </div>
 <!-- Grid column -->
@@ -203,4 +201,4 @@ display: none;
 </div>
 </div>
 </section>
-<div style="font-size: xx-large;text-align: center;"><a href="https://github.com/QuranIslam/"><i class="fa fa-github"></i> </a><a href="https://www.youtube.com/channel/UC1-K01zlc6eLiR0xcc5FVmg"><i class="fa fa-youtube"></i> </a><a href="https://www.instagram.com/muslimquranislam/"><i class="fa fa-instagram"></i> </a><a href="https://www.pinterest.com/MuslimQuranIslam/"><i class="fa fa-pinterest"></i> </a></div></body></html>
+<div style="font-size: xx-large;text-align: center;"><a href="https://github.com/9v3/"><i class="fa fa-github"></i>  </a><a href="https://www.instagram.com/w_.dg/"><i class="fa fa-instagram"></i> </a></div></body></html>
